--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -173,7 +173,7 @@
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="card">
                         <div class="card-img">
-                            <div class="inner">
+                            <div class="card-inner">
                                 <img src="assets/img/mc/mc31.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
@@ -190,7 +190,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img">
-                            <div class="inner">
+                            <div class="card-inner">
                                 <img src="assets/img/mc/mc30.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
@@ -207,7 +207,7 @@
                     </div>
                     <div class="card">
                         <div class="card-img">
-                            <div class="inner">
+                            <div class="card-inner">
                                 <img src="assets/img/mc/mc29.jpg" alt="" class="card-img-top img-fluid">
                             </div>
                         </div>
