--- a/celebrate/pages/book_mc_mixed.html
+++ b/celebrate/pages/book_mc_mixed.html
@@ -55,6 +55,9 @@
                 <a href="../index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
+                <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
                 <a href="reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
@@ -71,7 +74,7 @@
             </div>
             <div class="cart">
                 <div class="basket-badge">
-                    <div class="badge">3</div>
+                    <div class="badge">0</div>
                     <i class="fas fa-shopping-basket"></i>
                 </div>
                 <div class="carts">
@@ -319,7 +322,7 @@
                     </h3>
                     <nav class="footer-nav">
                         <a href="../index.html">Home</a>
-                        <a href="reviews.html">Reviews</a>
+                        <a href="about.html">About</a>
                         <a href="mybookings.html">My Bookings</a>
                         <a href="contact.html">Contact</a>
                     </nav>
