--- a/celebrate/pages/book_mc_official.html
+++ b/celebrate/pages/book_mc_official.html
@@ -152,7 +152,7 @@
         <!-- MCs -->
         <section id="mcs" class="text-black bg-white">
             <div class="container">
-                <h2 class="display-4 text-center text-primary">Masters of Ceremony | Official</h2>
+                <h2 class="display-4 text-center text-primary">MC | Professional</h2>
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="card">
                         <div class="card-img">
@@ -166,7 +166,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -198,7 +198,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -216,7 +216,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -232,7 +232,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -248,7 +248,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -266,7 +266,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -282,7 +282,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -298,7 +298,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
