--- a/celebrate/pages/book_mc_casual.html
+++ b/celebrate/pages/book_mc_casual.html
@@ -152,7 +152,7 @@
         <!-- MCs -->
         <section id="mcs" class="text-black bg-white">
             <div class="container">
-                <h2 class="display-4 text-center text-primary">Masters of Ceremony | Casual</h2>
+                <h2 class="display-4 text-center text-primary">MC | Standard</h2>
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="card">
                         <div class="card-img">
@@ -166,7 +166,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -182,7 +182,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -198,57 +198,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="row flex even-columns pt-0 pb-0">
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="card">
-                        <div class="card-img">
-                            <div class="inner">
-                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
-                            </div>
-                        </div>
-                        <div class="card-body">
-                            <h3>MC Pilipili</h3>
-                            <p>
-                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
-                            </p>
-                            <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -266,7 +216,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -282,7 +232,7 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
@@ -298,7 +248,57 @@
                                 The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
                             </p>
                             <div class="add-cart-price">
-                                <a href="mc_user_view.html" class="btn-cart">Select</a>
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row flex even-columns pt-0 pb-0">
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <p>
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                            </p>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <p>
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                            </p>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="card">
+                        <div class="card-img">
+                            <div class="inner">
+                                <img src="../assets/img/mc/mc.jpg" alt="" class="card-img-top img-fluid">
+                            </div>
+                        </div>
+                        <div class="card-body">
+                            <h3>MC Pilipili</h3>
+                            <p>
+                                The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
+                            </p>
+                            <div class="add-cart-price">
+                                <a href="mc_user_view.html" class="btn-cart">Book Now</a>
                             </div>
                         </div>
                     </div>
