Nav menu button changed

--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -34,21 +34,7 @@
         </a>
         <label for="check" id="checkbtn">
             <div class="menu">
-                <div class="menu-bar-group-1">
-                    <div class="menu-bar"></div>
-                    <div class="menu-bar"></div>
-                    <div class="menu-bar"></div>
-                </div>
-                <div class="menu-bar-group-2">
-                    <div class="menu-bar"></div>
-                    <div class="menu-bar"></div>
-                    <div class="menu-bar"></div>
-                </div>
-                <div class="menu-bar-group-3">
-                    <div class="menu-bar"></div>
-                    <div class="menu-bar"></div>
-                    <div class="menu-bar"></div>
-                </div>
+                <i class="fas fa-th"></i>
             </div>
         </label>
         <input type="checkbox" name="check" id="check">
