--- a/celebrate/pages/about.html
+++ b/celebrate/pages/about.html
@@ -136,7 +136,7 @@
     <main>
 
         <!-- Reviews -->
-        <section id="reviews" class="text-black bg-white">
+        <section id="about-header" class="text-black bg-white">
             <div class="container">
                 <div class="row flex pt-5 pb-3">
                     <div class="about-container ">
@@ -146,6 +146,69 @@
             </div>
         </section>
         <!-- End reviews -->
+
+        <!-- About 1 -->
+        <section id="about" class="bg-white">
+            <div class="container">
+                <h2 class="display-4 text-center text-black">Who We Are</h2>
+                <div class="row flex even-columns py-5">
+                    <div class="col">
+                        <img src="../assets/img/hero/hero6.svg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col col-text">
+                        <h3 class="mission-heading">Our Mission</h3>
+                        <p class="mission-para">
+                            Making your ceremony memorable with the greatest master of ceremony of your choice, and bringing the greatest heart's satisfaction and joy to celebrate.
+                        </p>
+                        <div class="social">
+                            <a href="#" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-pinterest"></i>
+                            </a>
+                            <a href="#" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-facebook"></i>
+                            </a>
+                            <a href="#" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-instagram"></i>
+                            </a>
+                            <a href="#" target="_blank" rel="noopener noreferrer">
+                                <i class="fab fa-twitter"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End About -->
+
+        <!-- About 2 -->
+        <section id="about-2" class="bg-secondary">
+            <div class="container">
+                <div class="row flex">
+                    <div class="col col-text">
+                        <h3 class="mission-heading">Our Vision</h3>
+                        <p class="mission-para">
+                            Making your ceremony memorable with the greatest master of ceremony of your choice, and bringing the greatest heart's satisfaction and joy to celebrate.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End About -->
+
+        <!-- About 3 -->
+        <section id="about-3" class="bg-white">
+            <div class="container">
+                <div class="row flex py-5">
+                    <div class="col col-text">
+                        <h3 class="mission-heading">Our Objective</h3>
+                        <p class="mission-para">
+                            Making your ceremony memorable with the greatest master of ceremony of your choice, and bringing the greatest heart's satisfaction and joy to celebrate.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- End About -->
 
     </main>
     <!-- End Main -->
