--- a/celebrate/pages/about.html
+++ b/celebrate/pages/about.html
@@ -158,22 +158,9 @@
                     <div class="col col-text">
                         <h3 class="mission-heading">Our Mission</h3>
                         <p class="mission-para">
-                            Making your ceremony memorable with the greatest master of ceremony of your choice, and bringing the greatest heart's satisfaction and joy to celebrate.
+                            Making your ceremony memorable with the greatest master of ceremony of your choice, and bringing the greatest heart's satisfaction and joy to celebrate. <br> Making your ceremony memorable with the greatest master of ceremony
+                            of your choice, and bringing the greatest heart's satisfaction and joy to celebrate.
                         </p>
-                        <div class="social">
-                            <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-pinterest"></i>
-                            </a>
-                            <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-facebook"></i>
-                            </a>
-                            <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-instagram"></i>
-                            </a>
-                            <a href="#" target="_blank" rel="noopener noreferrer">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
                     </div>
                 </div>
             </div>
