--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -49,7 +49,7 @@
                 <a href="pages/reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="pages/mybookings.html" class="nav-link">My Bookings</a>
+                <a href="#mcs" class="nav-link">Get MC</a>
             </li>
             <li class="nav-item">
                 <a href="pages/contact.html" class="nav-link">Contact</a>
