--- a/celebrate/pages/checkout.html
+++ b/celebrate/pages/checkout.html
@@ -41,10 +41,13 @@
                 <a href="../index.html" class="nav-link">Home</a>
             </li>
             <li class="nav-item">
+                <a href="about.html" class="nav-link">About</a>
+            </li>
+            <li class="nav-item">
                 <a href="reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="mybookings.html" class="nav-link">My Bookings</a>
+                <a href="../index.html#mcs" class="nav-link">Get MC</a>
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
@@ -57,7 +60,7 @@
             </div>
             <div class="cart">
                 <div class="basket-badge">
-                    <div class="badge">3</div>
+                    <div class="badge">0</div>
                     <i class="fas fa-shopping-basket"></i>
                 </div>
                 <div class="carts">
@@ -241,8 +244,9 @@
                     </h3>
                     <nav class="footer-nav">
                         <a href="../index.html">Home</a>
+                        <a href="about.html">About</a>
                         <a href="reviews.html">Reviews</a>
-                        <a href="mybookings.html">My Bookings</a>
+                        <a href="../index.html#mcs">Get MC</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
