--- a/celebrate/pages/contact.html
+++ b/celebrate/pages/contact.html
@@ -47,7 +47,7 @@
                 <a href="reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="mybookings.html" class="nav-link">My Bookings</a>
+                <a href="../index.html#mcs" class="nav-link">Get MC</a>
             </li>
             <li class="nav-item">
                 <a href="#home" class="nav-link active">Contact</a>
@@ -229,7 +229,7 @@
                         <a href="../index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="reviews.html">Reviews</a>
-                        <a href="mybookings.html">My Bookings</a>
+                        <a href="../index.html#mcs">Get MC</a>
                         <a href="#home">Contact</a>
                     </nav>
                 </div>
