--- a/celebrate/pages/mybookings.html
+++ b/celebrate/pages/mybookings.html
@@ -47,7 +47,7 @@
                 <a href="reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="#home" class="nav-link active">My Bookings</a>
+                <a href="../index.html#mcs" class="nav-link">Get MC</a>
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
@@ -160,10 +160,10 @@
                     <div class="bookings-table">
                         <table>
                             <tr id="t-header">
-                                <th id="moc">MC's Image</th>
-                                <th id="moc">MC's Name</th>
-                                <th id="moc">Booking Actions</th>
-                                <th id="booking-price">Booking Unit Price</th>
+                                <th id="moc">Image</th>
+                                <th id="moc">Name</th>
+                                <th id="moc">Actions</th>
+                                <th id="booking-price">Booking Price</th>
                                 <th id="total">Total</th>
                             </tr>
                             <tr>
@@ -292,7 +292,7 @@
                         <a href="../index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="reviews.html">Reviews</a>
-                        <a href="#home">My Bookings</a>
+                        <a href="../index.html#mcs">Get MC</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
