--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -335,7 +335,7 @@
                         <a href="#home">Home</a>
                         <a href="pages/about.html">About</a>
                         <a href="pages/reviews.html">Reviews</a>
-                        <a href="pages/mybookings.html">My Bookings</a>
+                        <a href="#mcs">Get MC</a>
                         <a href="pages/contact.html">Contact</a>
                     </nav>
                 </div>
