--- a/celebrate/pages/book_mc_mixed.html
+++ b/celebrate/pages/book_mc_mixed.html
@@ -47,7 +47,7 @@
                 <a href="reviews.html" class="nav-link">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="mybookings.html" class="nav-link">My Bookings</a>
+                <a href="../index.html#mcs" class="nav-link">Get MC</a>
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
@@ -309,7 +309,8 @@
                     <nav class="footer-nav">
                         <a href="../index.html">Home</a>
                         <a href="about.html">About</a>
-                        <a href="mybookings.html">My Bookings</a>
+                        <a href="reviews.html">Reviews</a>
+                        <a href="../index.html#mcs">Get MC</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
