--- a/celebrate/pages/mc_change_pass.html
+++ b/celebrate/pages/mc_change_pass.html
@@ -136,8 +136,9 @@
                     </h3>
                     <nav class="footer-nav">
                         <a href="../index.html">Home</a>
+                        <a href="about.html">About</a>
                         <a href="reviews.html">Reviews</a>
-                        <a href="mybookings.html">My Bookings</a>
+                        <a href="../index.html#mcs">Get MC</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
