--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -47,7 +47,7 @@
                 <a href="#home" class="nav-link active">Reviews</a>
             </li>
             <li class="nav-item">
-                <a href="mybookings.html" class="nav-link">My Bookings</a>
+                <a href="../index.html#mcs" class="nav-link">Get MC</a>
             </li>
             <li class="nav-item">
                 <a href="contact.html" class="nav-link">Contact</a>
@@ -400,7 +400,7 @@
                         <a href="../index.html">Home</a>
                         <a href="about.html">About</a>
                         <a href="#home">Reviews</a>
-                        <a href="mybookings.html">My Bookings</a>
+                        <a href="../index.html#mcs">Get MC</a>
                         <a href="contact.html">Contact</a>
                     </nav>
                 </div>
