Changes on celebrate web

--- a/celebrate/pages/mc_user_view.html
+++ b/celebrate/pages/mc_user_view.html
@@ -60,7 +60,7 @@
             </div>
             <div class="cart">
                 <div class="basket-badge">
-                    <div class="badge">3</div>
+                    <div class="badge">0</div>
                     <i class="fas fa-shopping-basket"></i>
                 </div>
                 <div class="carts">
@@ -141,7 +141,7 @@
                 <div class="row flex pt-5 pb-1">
                     <div class="mc-details">
                         <div class="mc-img">
-                            <img src="../assets/img/user/user1.jpg" alt="">
+                            <img src="../assets/img/mc/mc.jpg" alt="">
                         </div>
                         <h3 class="pt-1">Mc Pilipili</h3>
                     </div>
@@ -166,8 +166,9 @@
                     </div>
                 </div>
                 <div class="row flex">
-                    <div class="card p-4">
-                        <h3 class="pb-1">My Calendar</h3>
+                    <h2 class="display-4">Plan With Me</h2>
+                    <div class="card p-4 calendar-card">
+                        <h3 class="calendar pb-1">Calendar</h3>
                         <p>
                             The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me. The one and
                             only who could make your ceremony amazing, vibrating and full of joyous moments, no regret working with me.
@@ -181,29 +182,35 @@
             </div>
             <div class="container pt-2">
                 <div class="row flex">
-                    <h2 class="display-4">My Gallery</h2>
+                    <h2 class="display-4">What I Have Done</h2>
+                </div>
+                <div class="row flex even-columns pt-3 pb-0">
+                    <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
+                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
+                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc30.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
+                    </div>
                 </div>
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="mc-photo">
-                        <img src="../assets/img/mc/mc4.jpg" alt="" class="img-fluid">
+                        <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="mc-photo">
-                        <img src="../assets/img/mc/mc1.jpg" alt="" class="img-fluid">
+                        <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="mc-photo">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="img-fluid">
+                        <img src="../assets/img/mc/mc30.jpg" alt="" class="img-fluid">
                     </div>
-                </div>
-                <div class="row flex even-columns pt-3 pb-0">
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc4.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc1.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc2.jpg" alt="" class="img-fluid">
-                    </div>
+                    <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
+                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
+                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
                 </div>
             </div>
         </section>
