--- a/celebrate/pages/reviews.html
+++ b/celebrate/pages/reviews.html
@@ -143,7 +143,7 @@
                         <div class="review-user">
                             <p class="lead">Leave a review</p>
                             <div class="user">
-                                <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
+                                <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
                             </div>
                         </div>
                         <div class="reviews-form">
@@ -184,7 +184,7 @@
                         <div class="card flex-space-between">
                             <div class="card-img">
                                 <div class="inner">
-                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
+                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
                                 </div>
                                 <small>Novat Anderson</small>
                             </div>
@@ -205,7 +205,7 @@
                         <div class="card flex-space-between">
                             <div class="card-img">
                                 <div class="inner">
-                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
+                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
                                 </div>
                                 <small>John Mkwazi</small>
                             </div>
@@ -226,7 +226,7 @@
                         <div class="card flex-space-between">
                             <div class="card-img">
                                 <div class="inner">
-                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
+                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
                                 </div>
                                 <small>Grace Malike</small>
                             </div>
@@ -251,7 +251,7 @@
                         <div class="card flex-space-between">
                             <div class="card-img">
                                 <div class="inner">
-                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
+                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
                                 </div>
                                 <small>Novat Anderson</small>
                             </div>
@@ -272,7 +272,7 @@
                         <div class="card flex-space-between">
                             <div class="card-img">
                                 <div class="inner">
-                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
+                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
                                 </div>
                                 <small>John Mkwazi</small>
                             </div>
@@ -293,7 +293,7 @@
                         <div class="card flex-space-between">
                             <div class="card-img">
                                 <div class="inner">
-                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
+                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
                                 </div>
                                 <small>Grace Malike</small>
                             </div>
@@ -316,7 +316,7 @@
                         <div class="card flex-space-between">
                             <div class="card-img">
                                 <div class="inner">
-                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
+                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
                                 </div>
                                 <small>Novat Anderson</small>
                             </div>
@@ -337,7 +337,7 @@
                         <div class="card flex-space-between">
                             <div class="card-img">
                                 <div class="inner">
-                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
+                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
                                 </div>
                                 <small>John Mkwazi</small>
                             </div>
@@ -358,7 +358,7 @@
                         <div class="card flex-space-between">
                             <div class="card-img">
                                 <div class="inner">
-                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid">
+                                    <img src="../assets/img/user/user1.jpg" alt="" class="img-fluid user-img">
                                 </div>
                                 <small>Grace Malike</small>
                             </div>
@@ -390,7 +390,7 @@
         <div class="container">
             <div class="row even-columns">
                 <div class="col">
-                    <img src="../assets/img/logo/logo5.svg " alt=" " class="img-fluid footer-logo ">
+                    <img src="../assets/img/logo/logo5.svg " alt=" " class="img-fluid user-img footer-logo ">
                 </div>
                 <div class="col">
                     <h3 class="text-secondary">
