--- a/celebrate/pages/mc_user_view.html
+++ b/celebrate/pages/mc_user_view.html
@@ -184,7 +184,7 @@
                 <div class="row flex">
                     <h2 class="display-4">What I Have Done</h2>
                 </div>
-                <div class="row flex even-columns pt-3 pb-0">
+                <div class="flex even-columns pt-3 pb-0">
                     <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
                     <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
@@ -192,18 +192,32 @@
                         <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="mc-photo">
-                        <img src="../assets/img/mc/mc30.jpg" alt="" class="img-fluid">
-                    </div>
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
-                    </div>
-                </div>
-                <div class="row flex even-columns pt-3 pb-0">
-                    <div class="mc-photo">
-                        <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
+                        <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="mc-photo">
                         <img src="../assets/img/mc/mc31.jpg" alt="" class="img-fluid">
+                    </div>
+                </div>
+                <div class="flex even-columns pb-0">
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc29.jpg" alt="" class="img-fluid">
+                    </div>
+                    <!-- <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
+                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe>
+                    <iframe src="https://www.youtube.com/watch?v=FFUQEHRSMQA" frameborder="0"></iframe> -->
+                </div>
+                <div class="flex even-columns pb-0">
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc30.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="mc-photo">
+                        <img src="../assets/img/mc/mc30.jpg" alt="" class="img-fluid">
                     </div>
                     <div class="mc-photo">
                         <img src="../assets/img/mc/mc30.jpg" alt="" class="img-fluid">
