--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -68,7 +68,7 @@
                 <div class="carts">
                     <div class="cart-details">
                         <img src="assets/img/mc/mc.jpg" alt="" class="cart-img">
-                        <h5>MC Maeda</h5>
+                        <h5>Maeda</h5>
                         <p>
                             TZS 150,000,00.00
                         </p>
@@ -76,7 +76,7 @@
                     </div>
                     <div class="cart-details">
                         <img src="assets/img/mc/mc.jpg" alt="" class="cart-img">
-                        <h5>MC Njozi</h5>
+                        <h5>Njozi</h5>
                         <p>
                             TZS 340,000,00.00
                         </p>
@@ -84,7 +84,7 @@
                     </div>
                     <div class="cart-details">
                         <img src="assets/img/mc/mc.jpg" alt="" class="cart-img">
-                        <h5>MC Njozi</h5>
+                        <h5>Njozi</h5>
                         <p>
                             TZS 340,000,00.00
                         </p>
@@ -220,34 +220,160 @@
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="col">
                         <img src="assets/img/mc/mc4.jpg" alt="" class="img-fluid">
+                        <div class="content">
+                            <h3>Erick Mchome</h3>
+                            <div class="social">
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col">
-                        <img src="assets/img/mc/mc10.jpg" alt="" class="img-fluid">
+                        <img src="assets/img/mc/mc19.jpg" alt="" class="img-fluid">
+                        <div class="content">
+                            <h3>Warioba</h3>
+                            <div class="social">
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col">
                         <img src="assets/img/mc/mc8.jpg" alt="" class="img-fluid">
+                        <div class="content">
+                            <h3>Edwin Luvanda</h3>
+                            <div class="social">
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row flex even-columns pt-0 pb-0">
                     <div class="col">
                         <img src="assets/img/mc/mc6.jpg" alt="" class="img-fluid">
+                        <div class="content">
+                            <h3>Joshua Lwaga</h3>
+                            <div class="social">
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col">
-                        <img src="assets/img/mc/mc20.jpg" alt="" class="img-fluid">
+                        <img src="assets/img/mc/mc10.jpg" alt="" class="img-fluid">
+                        <div class="content">
+                            <h3>Gara B</h3>
+                            <div class="social">
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col">
                         <img src="assets/img/mc/mc18.jpg" alt="" class="img-fluid">
+                        <div class="content">
+                            <h3>David</h3>
+                            <div class="social">
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="row flex even-columns pt-0 pb-0">
                     <div class="col">
-                        <img src="assets/img/mc/mc19.jpg" alt="" class="img-fluid">
+                        <img src="assets/img/mc/mc20.jpg" alt="" class="img-fluid">
+                        <div class="content">
+                            <h3>Edo</h3>
+                            <div class="social">
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col">
                         <img src="assets/img/mc/mc21.jpg" alt="" class="img-fluid">
+                        <div class="content">
+                            <h3>Nico</h3>
+                            <div class="social">
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                     <div class="col">
                         <img src="assets/img/mc/mc26.jpg" alt="" class="img-fluid">
+                        <div class="content">
+                            <h3>Lukinga</h3>
+                            <div class="social">
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-facebook"></i>
+                                </a>
+                                <a href="https://www.instagram.com/celebrate_tanzania/" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-instagram"></i>
+                                </a>
+                                <a href="#" target="_blank" rel="noopener noreferrer">
+                                    <i class="fab fa-twitter"></i>
+                                </a>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
