--- a/celebrate/index.html
+++ b/celebrate/index.html
@@ -58,7 +58,7 @@
         <div class="search-cart-user">
             <div class="search">
                 <i class="fas fa-search"></i>
-                <input type="search" name="search" id="search" placeholder="Search...">
+                <input type="text" name="search" id="search" placeholder="Search...">
             </div>
             <div class="cart">
                 <div class="basket-badge">
@@ -153,7 +153,7 @@
         <!-- End Hero -->
 
         <!-- MCs Categories -->
-        <section id="mcs" class="categories text-black bg-light">
+        <section id="categories" class="text-black bg-light">
             <div class="container">
                 <h2 class="display-4 text-center text-black pt-3">Categories</h2>
                 <div class="row flex even-columns pt-3 pb-0">
@@ -214,13 +214,18 @@
         <!-- End MCs Categories -->
 
         <!-- MCs -->
-        <section id="mcs" class="featured text-black bg-white">
+        <section id="featured" class="text-black bg-white">
             <div class="container">
                 <h2 class="display-4 text-center text-dark pt-3">Featured</h2>
                 <div class="row flex even-columns pt-3 pb-0">
                     <div class="col">
                         <img src="assets/img/mc/mc4.jpg" alt="" class="img-fluid">
-                        <div class="content">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <a href="pages/mc_user_view.html" class="btn">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="mc-contents">
                             <h3>Erick Mchome</h3>
                             <div class="social">
                                 <a href="#" target="_blank" rel="noopener noreferrer">
@@ -237,7 +242,12 @@
                     </div>
                     <div class="col">
                         <img src="assets/img/mc/mc19.jpg" alt="" class="img-fluid">
-                        <div class="content">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <a href="pages/mc_user_view.html" class="btn">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="mc-contents">
                             <h3>Warioba</h3>
                             <div class="social">
                                 <a href="#" target="_blank" rel="noopener noreferrer">
@@ -254,7 +264,12 @@
                     </div>
                     <div class="col">
                         <img src="assets/img/mc/mc8.jpg" alt="" class="img-fluid">
-                        <div class="content">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <a href="pages/mc_user_view.html" class="btn">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="mc-contents">
                             <h3>Edwin Luvanda</h3>
                             <div class="social">
                                 <a href="#" target="_blank" rel="noopener noreferrer">
@@ -273,7 +288,12 @@
                 <div class="row flex even-columns pt-0 pb-0">
                     <div class="col">
                         <img src="assets/img/mc/mc6.jpg" alt="" class="img-fluid">
-                        <div class="content">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <a href="pages/mc_user_view.html" class="btn">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="mc-contents">
                             <h3>Joshua Lwaga</h3>
                             <div class="social">
                                 <a href="#" target="_blank" rel="noopener noreferrer">
@@ -290,7 +310,12 @@
                     </div>
                     <div class="col">
                         <img src="assets/img/mc/mc10.jpg" alt="" class="img-fluid">
-                        <div class="content">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <a href="pages/mc_user_view.html" class="btn">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="mc-contents">
                             <h3>Gara B</h3>
                             <div class="social">
                                 <a href="#" target="_blank" rel="noopener noreferrer">
@@ -307,7 +332,12 @@
                     </div>
                     <div class="col">
                         <img src="assets/img/mc/mc18.jpg" alt="" class="img-fluid">
-                        <div class="content">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <a href="pages/mc_user_view.html" class="btn">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="mc-contents">
                             <h3>David</h3>
                             <div class="social">
                                 <a href="#" target="_blank" rel="noopener noreferrer">
@@ -326,7 +356,12 @@
                 <div class="row flex even-columns pt-0 pb-0">
                     <div class="col">
                         <img src="assets/img/mc/mc20.jpg" alt="" class="img-fluid">
-                        <div class="content">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <a href="pages/mc_user_view.html" class="btn">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="mc-contents">
                             <h3>Edo</h3>
                             <div class="social">
                                 <a href="#" target="_blank" rel="noopener noreferrer">
@@ -343,7 +378,12 @@
                     </div>
                     <div class="col">
                         <img src="assets/img/mc/mc21.jpg" alt="" class="img-fluid">
-                        <div class="content">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <a href="pages/mc_user_view.html" class="btn">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="mc-contents">
                             <h3>Nico</h3>
                             <div class="social">
                                 <a href="#" target="_blank" rel="noopener noreferrer">
@@ -360,7 +400,12 @@
                     </div>
                     <div class="col">
                         <img src="assets/img/mc/mc26.jpg" alt="" class="img-fluid">
-                        <div class="content">
+                        <div class="overlay">
+                            <div class="overlay-content">
+                                <a href="pages/mc_user_view.html" class="btn">Book Now</a>
+                            </div>
+                        </div>
+                        <div class="mc-contents">
                             <h3>Lukinga</h3>
                             <div class="social">
                                 <a href="#" target="_blank" rel="noopener noreferrer">
